maze.island.IslandMaze.scala.error
Compilation error:
IslandMaze:34: error: reassignment to val
    dir = getDirection();
        ^